--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  supabase_flutter: ^2.5.6
+  flutter_bloc: ^9.1.1
+  intl: ^0.20.2
+  table_calendar: ^3.1.2
+  file_picker: ^10.3.3
+  image_picker: ^1.1.2
+  flutter_local_notifications: ^19.5.0
+  firebase_messaging: ^16.0.3
+  shared_preferences: ^2.3.2
+  permission_handler: ^12.0.1
+  cached_network_image: ^3.3.1
+  go_router: ^16.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
