--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,13 @@ dependencies:
   table_calendar: ^3.1.2
   file_picker: ^10.3.3
   image_picker: ^1.1.2
-  flutter_local_notifications: ^19.5.0
   firebase_messaging: ^16.0.3
   shared_preferences: ^2.3.2
   permission_handler: ^12.0.1
   cached_network_image: ^3.3.1
   go_router: ^16.3.0
+  flutter_dotenv: ^6.0.0
+  path_provider: ^2.1.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -68,7 +69,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - .env
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
