--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,10 @@ dependencies:
   shared_preferences: ^2.3.2
   permission_handler: ^12.0.1
   cached_network_image: ^3.3.1
-  go_router: ^16.3.0
+  go_router: ^17.0.0
   flutter_dotenv: ^6.0.0
   path_provider: ^2.1.4
+  phosphor_flutter: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
