--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_dotenv: ^6.0.0
   path_provider: ^2.1.4
   phosphor_flutter: ^2.0.0
+  url_launcher: ^6.2.6
+  photo_view: ^0.15.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
