--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   table_calendar: ^3.1.2
   file_picker: ^10.3.3
   image_picker: ^1.1.2
-  firebase_messaging: ^16.0.3
+  firebase_messaging: ^16.0.4
   shared_preferences: ^2.3.2
   permission_handler: ^12.0.1
   cached_network_image: ^3.3.1
@@ -46,12 +46,16 @@ dependencies:
   phosphor_flutter: ^2.0.0
   url_launcher: ^6.2.6
   photo_view: ^0.15.0
+  fluttertoast: ^8.2.2
+  connectivity_plus: ^6.0.0
+  device_info_plus: ^10.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.2
   font_awesome_flutter: ^10.12.0
+  firebase_core: ^4.2.1
 
 dev_dependencies:
   flutter_test:
