--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   connectivity_plus: ^6.0.0
   device_info_plus: ^10.0.0
   flutter_local_notifications: ^18.0.1
+  onesignal_flutter: ^5.3.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
