--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   device_info_plus: ^10.0.0
   flutter_local_notifications: ^18.0.1
   onesignal_flutter: ^5.3.4
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -112,3 +114,22 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  adaptive_icon_background: "#038949"
+  image_path: "assets/icon.png"
+  min_sdk_android: 21 # standard for modern apps
+
+flutter_native_splash:
+  color: "#038949" 
+  image: "assets/splash.png"
+  android_12:
+    # Android 12+ handles splash screens differently, this ensures compatibility
+    color: "#038949"
+    image: "assets/splash.png"
+  
+  # specific to android/ios if you want different scaling
+  android: true
+  ios: true
